--- a/assets/app/index.html
+++ b/assets/app/index.html
@@ -44,6 +44,7 @@
 
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/cards.js"></script>
+        <script src="scripts/controllers/register.js"></script>
         <!-- endbuild -->
 </body>
 </html>
