--- a/assets/app/index.html
+++ b/assets/app/index.html
@@ -13,6 +13,7 @@
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/cards.css">
+    <link rel="stylesheet" href="styles/barcode.css">
     <!-- endbuild -->
   </head>
   <body ng-app="grassroot">
@@ -39,12 +40,14 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/services/api_service.js"></script>
+        <script src="scripts/services/barcode_service.js"></script>
         <script src="scripts/services/cordovaready.js"></script>
         <script src="scripts/index.js"></script>
 
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/cards.js"></script>
         <script src="scripts/controllers/register.js"></script>
+        <script src="scripts/controllers/barcode.js"></script>
         <!-- endbuild -->
 </body>
 </html>
